...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/activity_atlas_reader_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1082DD"
        tools:listitem="@layout/item_reader_pager" />

    <com.kidscademy.atlas.view.FabMenu
...
        android:paddingEnd="16dp"
        app:backgroundColor="@color/white_T80"
        app:layout_behavior="com.kidscademy.atlas.view.FabMenu$Behavior"
        tools:background="@color/white_T80">

        <com.kidscademy.atlas.view.RandomColorFAB
            android:id="@+id/activity_reader_fab_main_menu"
            style="@style/FAB.MenuItem"
            app:srcCompat="@drawable/action_menu"
            tools:visibility="visible" />

        <com.kidscademy.atlas.view.RandomColorFAB
            android:id="@+id/activity_reader_fab_sync"
...
            android:id="@+id/activity_reader_fab_search"
            style="@style/FAB.MenuItem"
            app:srcCompat="@drawable/action_search"
            tools:visibility="visible" />

        <com.kidscademy.atlas.view.RandomColorFAB
            android:id="@+id/activity_reader_fab_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:tag="control"
            app:elevation="6dp"
            app:fabSize="normal"
...
