...
        android:background="@color/rule"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.kidscademy.atlas.view.HexaIcon
        android:id="@+id/reader_related_caption"
        android:layout_width="@dimen/hexa_icon_size"
        android:layout_height="@dimen/hexa_icon_size"
        app:borderColor="@color/white_T80"
        app:borderSize="1"
        app:layout_constraintBottom_toBottomOf="@id/reader_related_hr"
        app:layout_constraintEnd_toEndOf="@id/reader_related_vr"
...
        android:textAppearance="@style/TextAppearance.Medium.Accent"
        app:layout_constraintBottom_toTopOf="@+id/reader_related_hr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/reader_related_caption" />

    <include
        android:id="@+id/reader_related_objects"
        layout="@layout/compo_related_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
...
